fixed alignment and padding top custom footer

--- a/buildweek4/src/components/customFooters/customFooter/style.css
+++ b/buildweek4/src/components/customFooters/customFooter/style.css
@@ -5,7 +5,8 @@
   padding: 0 24px;
   display: flex;
   flex-direction: column;
-  align-items: start;
+  align-items: center;
+  padding-top: 64px;
 }
 
 .custom-footer-links-list {
